# revature-training-project-01

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  tests.md
NOTES/$ GUIDES $/: Regex.md
NOTES/$ GUIDES $/Git/: Acronyms.md
NOTES/v3/: JDK Installation Guide.md  Maven Installation Guide.md  Regex.md  SCRUM.md
archives/sql/: create_table_main_process.sql  truncate_all.sql
archives/sql_statements/: _insert_batch_process.py
config/: tornado_usa.yaml  tornado_usa_sources.yaml  wildfire_global.yaml  wildfire_global_sources.yaml
config/sources/: retail_store_sales.yaml
data/processed/: accepted.json  rejected.json
data/raw/: Forest_FIres_Data.json
docs/: architecture.md
notes/: commands.md  configuration.md  installation.md  tests.md
scripts/: check_table_names.py  convert_wildfires_to_json.py  main.py  test_ingest_all.py  test_load_config.py  test_reader.py
sql/: create_type_pipeline_status.sql  insert_main_process.sql  update_batch_process.sql
sql/migrations/: V001__initial_schema.sql
sql/v1/: create_table_batch_process.sql  create_table_pipeline.sql  insert_batch_process.sql
src/: db.py  main.py
src/app/: __init__.py  ingest.py
src/project/: __init__.py  constants.py  errors.py  main.py
src/scripts/: __init__.py
tests/: __init__.py  conftest.py  test_database_connection.py  test_db.md  test_db.py  test_db_version.py
tests/_core/: __init__.py
tests/core/: _logs.py  logging.py
tests/test_example/: test_bubble_sort.py  test_check_is_palindrome.py  test_multiply_digits.py  test_run_length_encode.py
(+312 files in other folders)
